--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -624,6 +624,15 @@ input::placeholder {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -655,6 +664,10 @@ input::placeholder {
   margin-bottom: var(--space-base);
 }
 
+.mb-tiny {
+  margin-bottom: calc(0.125 * var(--space-base));
+}
+
 .ml-5 {
   margin-left: 1.25rem;
 }
@@ -667,8 +680,24 @@ input::placeholder {
   margin-right: calc(0.125 * var(--space-base));
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-base {
   margin-top: var(--space-base);
+}
+
+.mt-vLarge {
+  margin-top: calc(2 * var(--space-base));
+}
+
+.mt-large {
+  margin-top: calc(1.5 * var(--space-base));
+}
+
+.mt-huge {
+  margin-top: calc(3 * var(--space-base));
 }
 
 .block {
@@ -699,8 +728,16 @@ input::placeholder {
   height: 1.25rem;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .h-6 {
   height: 1.5rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
@@ -740,6 +777,10 @@ input::placeholder {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -786,8 +827,17 @@ input::placeholder {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-b-\[1\.875rem\] {
+  border-bottom-right-radius: 1.875rem;
+  border-bottom-left-radius: 1.875rem;
 }
 
 .border {
@@ -818,9 +868,23 @@ input::placeholder {
   background-color: rgb(0 0 0 / 0.5);
 }
 
+.bg-blue-500\/50 {
+  background-color: rgb(59 130 246 / 0.5);
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -838,6 +902,11 @@ input::placeholder {
 
 .p-small {
   padding: calc(0.5 * var(--space-base));
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-base {
@@ -860,12 +929,26 @@ input::placeholder {
   padding-bottom: calc(0.125 * var(--space-base));
 }
 
+.py-base {
+  padding-top: var(--space-base);
+  padding-bottom: var(--space-base);
+}
+
 .text-center {
   text-align: center;
 }
 
+.text-huge {
+  font-size: calc(2.25 * var(--space-base));
+}
+
 .text-large {
-  font-size: calc(1.5 * var(--fontSize-base));
+  font-size: calc(1.25 * var(--fontSize-base));
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-vSmall {
@@ -874,6 +957,10 @@ input::placeholder {
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .capitalize {
@@ -887,6 +974,11 @@ input::placeholder {
 .text-red-900 {
   --tw-text-opacity: 1;
   color: rgb(127 29 29 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -926,7 +1018,41 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:static {
+    position: static;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-auto {
+    height: auto;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-\[1fr_4fr\] {
     grid-template-columns: 1fr 4fr;
+  }
+
+  .lg\:bg-transparent {
+    background-color: transparent;
+  }
+
+  .lg\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .lg\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+
+  .lg\:text-black\/75 {
+    color: rgb(0 0 0 / 0.75);
   }
 }
