--- a/ui/templates/base.tmpl
+++ b/ui/templates/base.tmpl
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Excalidraw:Local</title>
+  <title>Excalidraw:Actanon</title>
 
   <link rel="stylesheet" href="/public/css/styles.css">
 
   {{ block "head-scripts" . }}
   {{ end}}
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" 
+    rel="stylesheet"
+  >
 
   <script 
     src="https://unpkg.com/htmx.org@2.0.1" 
