--- a/ui/templates/home/select-collection.tmpl
+++ b/ui/templates/home/select-collection.tmpl
@@ -5,7 +5,7 @@
   id="select-collection"
   hx-get="/app"
   hx-target="body"
-  class="rounded p-small"
+  class="select select-bordered h-auto min-h-0 py-small leading-tight"
 >
   {{ range .CollectionsList }}
     <option 
