--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -2,33 +2,31 @@
 
 {{ range .DrawingList }}
   <div
-    class="flex justify-start items-center w-full"
+    class="w-full grid grid-cols-[4fr_1fr] gap-small"
     id="drawing-list-{{ .ID }}"
   >
-    {{ if (index $.PresenceMap .ID) }}
-      <Avatar-group data="{{(index $.PresenceMap .ID)}}" />
-    {{ end }}
-
     <a
       hx-get="/app?drawing={{.ID}}"
       hx-target="body"
-      class="underline cursor-pointer w-fit capitalize flex gap-base"
+      class="btn btn-sm flex justify-start no-animation"
       hx-inidcator="closest span"
     >
+      {{ if (index $.PresenceMap .ID) }}
+        <Avatar-group data="{{(index $.PresenceMap .ID)}}" />
+      {{ end }}
+      
       {{ .Name }}
       
       <span class="htmx-indicator ml-5"></span>
     </a>
 
-
-
     <button
      hx-delete="/app?drawing-ID={{ .ID }}"
      hx-target="#drawing-list-{{ .ID }}"
      hx-confirm="Are you sure you want to delete drawing {{ .Name }}"
-     class="ml-auto w-6 h-6 flex justify-center items-center"
+     class="btn btn-square"
     >
-      x
+      <Svg name="trash" class="w-4 h-4" />
     </button>
   </div>
 {{ else }}
