edit daisy theme

--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -63,7 +63,7 @@
 
 {{ define "sidebar" }}
   <section 
-    class="bg-gray-50 h-screen p-base"
+    class="bg-gray-50 h-screen p-base overflow-auto"
   >
     <div
       data-controller="toggleVisibility"
