add request indicators

--- a/assets/css/source.css
+++ b/assets/css/source.css
@@ -41,7 +41,15 @@ body {
   }
 
   .htmx-indicator {
-    @apply loading loading-spinner;
+    @apply hidden loading loading-spinner;
+  }
+
+  .htmx-request .htmx-indicator {
+    @apply block;
+  }
+
+  .htmx-request .htmx-hide {
+    display: none;
   }
 }
 
