--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -26,7 +26,9 @@
      hx-confirm="Are you sure you want to delete drawing {{ .Name }}"
      class="btn btn-square"
     >
-      <Svg name="trash" class="w-4 h-4" />
+      <Svg name="trash" class="w-4 h-4 htmx-hide" />
+
+      <span class="htmx-indicator ml-5"></span>
     </button>
   </div>
 {{ else }}
