--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -28,7 +28,7 @@
     >
       <Svg name="trash" class="w-4 h-4 htmx-hide" />
 
-      <span class="htmx-indicator ml-5"></span>
+      <span class="htmx-indicator"></span>
     </button>
   </div>
 {{ else }}
