--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -40,7 +40,7 @@
           >
               <Svg name="pencil" class="w-4 h-4 htmx-hide" />
 
-              <span class="htmx-indicator ml-5"></span>
+              <span class="htmx-indicator"></span>
           </a>
         {{ end }}
       </div>
@@ -71,11 +71,14 @@
       data-controller="toggleVisibility"
       class="my-large"
     >
-        <button 
+        <button
+          id="create-collection-btn"
           class="btn w-full"
           data-action="toggleVisibility#showContent"
         >
           Create collection
+
+          <span class="htmx-indicator ml-5"></span>
         </button>
 
         <form
@@ -83,6 +86,7 @@
           hx-post="/app/create-collection"
           hx-target="#select-collection"
           hx-swap="outerHTML"
+          hx-indicator="#create-collection-btn"
 
           data-toggleVisibility-target="content"
         >
@@ -99,8 +103,6 @@
             class="btn btn-primary"
           >
             Save
-
-            <span class="htmx-indicator ml-5"></span>
           </button>
           
           <button 
@@ -126,14 +128,18 @@
         data-action="toggleVisibility#showContent"
         title="Create drawing"
         class="btn w-full"
+        id="create-drawing-btn"
       >
         Create drawing
+        
+        <span class="htmx-indicator ml-5"></span>
       </button>
 
       <form
         class="flex flex-wrap gap-base mt-base"
         hx-post="/app/new-drawing"
         hx-target="#drawing-list"
+        hx-indicator="#create-drawing-btn"
        
         data-toggleVisibility-target="content"     
       >
