--- a/ui/templates/login.tmpl
+++ b/ui/templates/login.tmpl
@@ -31,6 +31,7 @@
         placeholder="Enter your email"
         required="true"
       />
+
       <Field
         type="password"
         name="password"
@@ -38,8 +39,9 @@
         placeholder="Enter a password"
         required="true"
       />
+
       <button
-        class="block mt-vLarge text-large py-small"
+        class="block mt-vLarge text-large btn btn-primary"
       >
         Submit
       </button>
