--- a/ui/templates/register.tmpl
+++ b/ui/templates/register.tmpl
@@ -66,7 +66,7 @@
       />
 
       <button 
-        class="block mt-vLarge text-large py-small"
+        class="block mt-vLarge text-large btn btn-primary"
       >
         Submit
       </button>
