--- a/ui/templates/home/drawing-list.tmpl
+++ b/ui/templates/home/drawing-list.tmpl
@@ -8,11 +8,14 @@
     <a
       hx-get="/app?drawing={{.ID}}"
       hx-target="body"
-      class="btn btn-sm flex justify-start no-animation"
+      class="btn btn-sm flex justify-start no-animation relative"
       hx-inidcator="closest span"
     >
       {{ if (index $.PresenceMap .ID) }}
-        <Avatar-group data="{{(index $.PresenceMap .ID)}}" />
+        <Avatar-group
+          data="{{(index $.PresenceMap .ID)}}" 
+          class="absolute right-0 bottom-0 translate-y-1/2"
+        />
       {{ end }}
       
       {{ .Name }}
@@ -24,7 +27,7 @@
      hx-delete="/app?drawing-ID={{ .ID }}"
      hx-target="#drawing-list-{{ .ID }}"
      hx-confirm="Are you sure you want to delete drawing {{ .Name }}"
-     class="btn btn-square"
+     class="btn btn-square no-animation"
     >
       <Svg name="trash" class="w-4 h-4 htmx-hide" />
 
