--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -73,7 +73,7 @@
     >
         <button
           id="create-collection-btn"
-          class="btn w-full"
+          class="btn btn-primary w-full"
           data-action="toggleVisibility#showContent"
         >
           Create collection
@@ -127,7 +127,7 @@
       <button 
         data-action="toggleVisibility#showContent"
         title="Create drawing"
-        class="btn w-full"
+        class="btn btn-primary w-full"
         id="create-drawing-btn"
       >
         Create drawing
