--- a/assets/css/source.css
+++ b/assets/css/source.css
@@ -25,7 +25,7 @@ body {
 
 @layer components {
   .btn {
-    @apply py-small h-auto min-h-0;
+    @apply py-small h-auto min-h-0 shadow;
   }
 
   .btn-primary {
