--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -812,18 +812,6 @@ html {
     }
   }
 
-  .btn-outline.btn-secondary:hover {
-    --tw-text-opacity: 1;
-    color: var(--fallback-sc,oklch(var(--sc)/var(--tw-text-opacity)));
-  }
-
-  @supports (color: color-mix(in oklab, black, black)) {
-    .btn-outline.btn-secondary:hover {
-      background-color: color-mix(in oklab, var(--fallback-s,oklch(var(--s)/1)) 90%, black);
-      border-color: color-mix(in oklab, var(--fallback-s,oklch(var(--s)/1)) 90%, black);
-    }
-  }
-
   .btn-disabled:hover,
     .btn[disabled]:hover,
     .btn:disabled:hover {
@@ -1122,21 +1110,12 @@ html {
   .btn-primary {
     --btn-color: var(--fallback-p);
   }
-
-  .btn-secondary {
-    --btn-color: var(--fallback-s);
-  }
 }
 
 @supports (color: color-mix(in oklab, black, black)) {
   .btn-outline.btn-primary.btn-active {
     background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
     border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
-  }
-
-  .btn-outline.btn-secondary.btn-active {
-    background-color: color-mix(in oklab, var(--fallback-s,oklch(var(--s)/1)) 90%, black);
-    border-color: color-mix(in oklab, var(--fallback-s,oklch(var(--s)/1)) 90%, black);
   }
 }
 
@@ -1156,16 +1135,6 @@ html {
   .btn-primary {
     --btn-color: var(--p);
   }
-
-  .btn-secondary {
-    --btn-color: var(--s);
-  }
-}
-
-.btn-secondary {
-  --tw-text-opacity: 1;
-  color: var(--fallback-sc,oklch(var(--sc)/var(--tw-text-opacity)));
-  outline-color: var(--fallback-s,oklch(var(--s)/1));
 }
 
 .btn.glass {
@@ -1188,16 +1157,6 @@ html {
 .btn-outline.btn-primary.btn-active {
   --tw-text-opacity: 1;
   color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
-}
-
-.btn-outline.btn-secondary {
-  --tw-text-opacity: 1;
-  color: var(--fallback-s,oklch(var(--s)/var(--tw-text-opacity)));
-}
-
-.btn-outline.btn-secondary.btn-active {
-  --tw-text-opacity: 1;
-  color: var(--fallback-sc,oklch(var(--sc)/var(--tw-text-opacity)));
 }
 
 .btn.btn-disabled,
@@ -1930,7 +1889,7 @@ input::placeholder {
   display: none;
 }
 
-.htmx-request .htmx-indicator {
+.htmx-request > .htmx-indicator {
   display: block;
 }
 
@@ -2072,6 +2031,10 @@ input::placeholder {
 
 .min-h-0 {
   min-height: 0px;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-4 {
@@ -2240,6 +2203,16 @@ input::placeholder {
   padding-right: var(--space-base);
 }
 
+.px-vLarge {
+  padding-left: calc(2 * var(--space-base));
+  padding-right: calc(2 * var(--space-base));
+}
+
+.py-base {
+  padding-top: var(--space-base);
+  padding-bottom: var(--space-base);
+}
+
 .py-large {
   padding-top: calc(1.5 * var(--space-base));
   padding-bottom: calc(1.5 * var(--space-base));
@@ -2323,6 +2296,10 @@ input::placeholder {
   justify-content: center;
 }
 
+.shadow-inset {
+  box-shadow: inset 0px 0px 3px #6b60a1;
+}
+
 :root {
   --space-base: 1rem;
   --fontSize-base: 1rem;
@@ -2344,8 +2321,8 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:grid-cols-\[1fr_5fr\] {
-    grid-template-columns: 1fr 5fr;
+  .md\:grid-cols-\[1fr_4fr\] {
+    grid-template-columns: 1fr 4fr;
   }
 }
 
@@ -2366,10 +2343,6 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-\[1fr_4fr\] {
-    grid-template-columns: 1fr 4fr;
-  }
-
   .lg\:bg-transparent {
     background-color: transparent;
   }
@@ -2386,5 +2359,17 @@ body {
 
   .lg\:text-black\/75 {
     color: rgb(0 0 0 / 0.75);
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:grid-cols-\[1fr_3fr\] {
+    grid-template-columns: 1fr 3fr;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:grid-cols-\[1fr_4fr\] {
+    grid-template-columns: 1fr 4fr;
   }
 }
