--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -24,7 +24,7 @@
       {{ if .ActiveDrawing.ID }}
         <p class="hidden" id="drawing-id"> {{.ActiveDrawing.ID}} </p>
         <p class="hidden" id="initial-drawing-data"> {{.ActiveDrawing.Data}} </p>
-        <p class="hidden" id="active-collection-id"> {{.ActiveDrawing.Collection}} </p>
+        <p class="hidden" id="active-collection-id"> {{.ActiveDrawing.CollectionID}} </p>
         <p class="hidden transition-opacity" id="is-editing"> {{.Editing}} </p>
         
         <div class="py-small flex justify-center items-center gap-small">
