--- a/ui/templates/auth-base.tmpl
+++ b/ui/templates/auth-base.tmpl
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <main class="grid grid-cols-1 lg:grid-cols-2 h-screen relative">
+  <main class="grid grid-cols-1 lg:grid-cols-2 h-screen relative items-center">
     <div
       id="form-panel" 
       class="px-6 lg:px-14 flex flex-col bg-white"
@@ -43,7 +43,7 @@
       class="hidden bg-blue-500/50 lg:flex flex-col gap-small items-center justify-center 
       text-white h-full"
     >
-      <p class="font-semibold text-huge">LOGO</p>
+      <p class="font-semibold text-huge uppercase">Excalidraw - Local</p>
     </div>
   </main>
 </body>
