--- a/ui/templates/home/home.tmpl
+++ b/ui/templates/home/home.tmpl
@@ -190,5 +190,7 @@
     >
       {{ template "home/drawing-list" .DrawingListData }}
     </div>
+
+    <a href="/login" class="block text-red-500 w-full text-center mt-large">Log out</a>
   </section>
 {{ end }}
